kubernetes/infrastructure/fluxci/notification/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-notifications-ingress
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux-notifications.local.fascinated.cc`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: notification-controller
          port: 80
  tls:
    secretName: fascinated-cc
